--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    <h1>My Recipes</h1>
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>Description</th>
+        </tr>
+        <tr th:each="recipe : ${recipes}">
+            <th th:text="${recipe.id}"> </th>
+            <th th:text="${recipe.description}"></th>
 
+        </tr>
+    </table>
 </body>
 </html>
