--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,19 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>My Recipes</h1>
-    <table>
-        <tr>
-            <th>Id</th>
-            <th>Description</th>
-        </tr>
-        <tr th:each="recipe : ${recipes}">
-            <th th:text="${recipe.id}"> </th>
-            <th th:text="${recipe.description}"></th>
 
-        </tr>
-    </table>
+    <div class="container-fluid" style="margin-top: 20px">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card border border-primary">
+                    <div class="card-header bg-primary text-light">
+                        <h3 class="card-title">My Recipes!</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive" th:if="${!#lists.isEmpty(recipes)}">
+                            <table class="table table-hover">
+                                <thead class="flex-column-reverse">
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Description</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:remove="all">
+                                        <td th:text="${recipe.id}"></td>
+                                        <td th:text="${recipe.description}"></td>
+                                    </tr>
+                                    <tr th:remove="all">
+                                        <td th:text="${recipe.id}"></td>
+                                        <td th:text="${recipe.description}"></td>
+                                    </tr>
+                                    <tr th:each="recipe:${recipes}">
+                                        <td th:text="${recipe.id}"></td>
+                                        <td th:text="${recipe.description}"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
