--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-          crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
+    <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/js/bootstrap.min.js}"></script>
 </head>
 <body>
 
@@ -28,21 +24,18 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Description</th>
+                                    <th>View</th>
+                                    <th>Update</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                    <tr th:remove="all">
-                                        <td th:text="${recipe.id}"></td>
-                                        <td th:text="${recipe.description}"></td>
-                                    </tr>
-                                    <tr th:remove="all">
-                                        <td th:text="${recipe.id}"></td>
-                                        <td th:text="${recipe.description}"></td>
-                                    </tr>
                                     <tr th:each="recipe:${recipes}">
                                         <td th:text="${recipe.id}"></td>
                                         <td th:text="${recipe.description}"></td>
+                                        <td> <a th:href="@{'/recipe/view/' + ${recipe.id}}" th:text="${recipe.id}">View</a></td>
+                                        <td><a th:href="@{'/recipe/update/' + ${recipe.id} }">Update</a></td>
                                     </tr>
+
                                 </tbody>
                             </table>
                         </div>
