--- a/src/main/resources/templates/recipe/form.html
+++ b/src/main/resources/templates/recipe/form.html
@@ -17,7 +17,7 @@
                 <form  th:object="${recipe}" th:action="@{/recipe/}"  method="post">
                     <input type="hidden" th:field="*{id}"/>
                     <div class="card-group">
-                        <div class="card border-primary" style="background-color: red">
+                        <div class="card border-primary" style="background-color: #ea0606">
                             <div class="card-header">
                                 <h1 class="card-title">Edit Recipe Information</h1>
                             </div>
@@ -139,6 +139,9 @@
                         </div>
                     </div>
                     <button  type="submit" class="btn btn-primary">Submit</button>
+                    <!-- It seems this form needs the id of notes when updating the Recipe, otherwise a new note gets created everytime we update. This breaks the persistance and we get "referential integrity constraint violation exception". -->
+                    <!-- This exception happens when you update a recipe and try to delete any recipe after that. -->
+                    <input type="hidden" th:field="*{notes.id}"/>
                 </form>
             </div>
         </div>
