--- a/src/main/resources/templates/recipe/ingredient/view.html
+++ b/src/main/resources/templates/recipe/ingredient/view.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Malzemeler</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
     <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/js/bootstrap.min.js}"></script>
+
 </head>
 <body>
-
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -18,25 +18,20 @@
                         <h3 class="card-title">My Recipes!</h3>
                     </div>
                     <div class="card-body">
-                        <div class="table-responsive" th:if="${!#lists.isEmpty(recipes)}">
+                        <div class="table-responsive" th:if="${!#lists.isEmpty(recipe.ingredients)}">
                             <table class="table table-hover">
                                 <thead class="flex-column-reverse">
                                 <tr>
                                     <th>ID</th>
                                     <th>Description</th>
-                                    <th>View</th>
-                                    <th>Update</th>
+                                    <th>Actions</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                    <tr th:each="recipe:${recipes}">
-                                        <td th:text="${recipe.id}"></td>
-                                        <td th:text="${recipe.description}"></td>
-                                        <td> <a th:href="@{'/recipe/view/' + ${recipe.id}}" th:text="${recipe.id}">View</a></td>
-                                        <td><a th:href="@{'/recipe/update/' + ${recipe.id} }">Update</a></td>
-                                        <td><a th:href="@{'/recipe/delete/' + ${recipe.id} }" >Delete</a></td>
-                                    </tr>
-
+                                <tr th:each="ingredient:${recipe.ingredients}">
+                                    <td th:text="${ingredient.id}"></td>
+                                    <td th:text="${ingredient.getAmount()}"></td>
+                                </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -45,5 +40,16 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
