--- a/src/main/resources/templates/recipe/view.html
+++ b/src/main/resources/templates/recipe/view.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="card border border-primary" style="margin-top: 10px">
                     <div class="card-header bg-primary text-light">
-                        <h3 class="card-title" th:text="Ingredients">Ingredients</h3>
+                        <a th:href="@{'/recipe/ingredient/view/'+ ${recipe.id}}" class="card-title" th:text="Ingredients" style="color: white;text-decoration:none;font-size: 25px">Ingredients</a>
                     </div>
                     <div class="card-body">
                         <div class="row">
@@ -83,6 +83,7 @@
                                     <li th:remove="all">1 Cup of milk</li>
                                     <li th:remove="all">1 Teaspoon of chocolate</li>
                                     <li th:each="ingredient : ${recipe.ingredients}" th:text="${ingredient.getAmount() + ' (' + ingredient.unitOfMeasure.getDescription() + ') ' + ingredient.getDescription()} ">1 Teaspoon of Sugar</li>
+
                                 </ul>
                             </div>
                         </div>
@@ -113,9 +114,12 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+            <a type="button" class="btn btn-primary btn-lg" th:href="@{'/index'}" > Go back to Homepage</a>
         </div>
     </div>
+
+
+
 </body>
 </html>
