--- a/src/main/resources/templates/recipe/view.html
+++ b/src/main/resources/templates/recipe/view.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>View</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
     <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="card border border-primary" style="margin-top: 10px">
                     <div class="card-header bg-primary text-light">
-                        <a th:href="@{'/recipe/ingredient/view/'+ ${recipe.id}}" class="card-title" th:text="Ingredients" style="color: white;text-decoration:none;font-size: 25px">Ingredients</a>
+                        <a th:href="@{'/recipe/ingredient/index/'+ ${recipe.id}}" class="card-title" th:text="Ingredients" style="color: white;text-decoration:none;font-size: 25px">Ingredients</a>
                     </div>
                     <div class="card-body">
                         <div class="row">
