--- a/src/main/resources/templates/recipe/ingredient/index.html
+++ b/src/main/resources/templates/recipe/ingredient/index.html
@@ -15,7 +15,7 @@
             <div class="col-md-6">
                 <div class="card border border-primary">
                     <div class="card-header bg-primary text-light">
-                        <h3 class="card-title">My Recipes!</h3>
+                        <h3 class="card-title">Ingredients!</h3>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive" th:if="${!#lists.isEmpty(recipe.ingredients)}">
