--- a/src/main/resources/templates/recipe/ingredient/view.html
+++ b/src/main/resources/templates/recipe/ingredient/view.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Malzemeler</title>
+    <title>Ingredient</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
     <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
@@ -10,46 +10,42 @@
 
 </head>
 <body>
-    <div class="container-fluid" style="margin-top: 20px">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card border border-primary">
-                    <div class="card-header bg-primary text-light">
-                        <h3 class="card-title">My Recipes!</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive" th:if="${!#lists.isEmpty(recipe.ingredients)}">
-                            <table class="table table-hover">
-                                <thead class="flex-column-reverse">
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Description</th>
-                                    <th>Actions</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="ingredient:${recipe.ingredients}">
-                                    <td th:text="${ingredient.id}"></td>
-                                    <td th:text="${ingredient.getAmount()}"></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
+
+<div class="container-fluid" style="margin-top: 20px">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card border border-primary">
+                <div class="card-header bg-primary text-light">
+                    <h3 class="card-title">Solo Ingredient</h3>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead class="flex-column-reverse">
+                            <tr>
+                                <th>ID</th>
+                                <th>Description</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td th:text="${ingredient.id}"></td>
+                                <td th:text="${ingredient.getAmount()}"></td>
+                                <td>
+                                    <a th:href="@{'/recipe/ingredient/view/'+ ${ingredient.id}}" th:text="View">View</a>
+                                    <h3>   </h3>
+                                    <a th:href="@{'/recipe/ingredient/update/'+ ${ingredient.id}}" th:text="Update">Update</a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
+</div>
 
 </body>
 </html>
