--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/somestuff.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
     <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/js/bootstrap.min.js}"></script>
@@ -14,8 +14,14 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card border border-primary">
-                    <div class="card-header bg-primary text-light">
+                    <div class="card-header bg-primary text-light"
+                         style="display: flex;
+                         justify-content: space-between;
+                         align-items: center;">
                         <h3 class="card-title">My Recipes!</h3>
+                        <div style="margin-left: auto;">
+                            <a class="hyperbutton" th:href="@{'/recipe/new'}">Create Recipe</a>
+                        </div>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive" th:if="${!#lists.isEmpty(recipes)}">
