--- a/src/main/resources/templates/recipe/form.html
+++ b/src/main/resources/templates/recipe/form.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Recipes</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
@@ -98,15 +97,14 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <ul id="ingredientList">
-                                            <li th:each="ingredient: ${ingredientList}">
-                                                <input type="hidden" th:field="*{ingredients[__${stat.index}__].id"/>
-                                                <div>
-                                                    <input type="text" th:field="*{ingredients[__${stat.index}__].description}" />
-                                                    <select class="form-control" th:field="*{ingredients[__${stat.index}__].unitOfMeasure}">
-                                                        <option th:each="item : ${uomList}"  th:value="${item.id}" th:text="${item.description}"></option>
-                                                    </select>
-                                                    <input type="text" placeholder="Amount" th:field="*{ingredients[__${stat.index}__].amount}"/>
-                                                </div>
+                                            <li th:each="ingredient,stat: *{ingredients}">
+                                                <input type="hidden" th:field="*{ingredients[__${stat.index}__].id}"/>
+                                                <input type="text" placeholder="Taco Burrito" th:field="*{ingredients[__${stat.index}__].description}"/>
+                                                <input type="text" placeholder="Amount" th:field="*{ingredients[__${stat.index}__].amount}"/>
+                                                <select class="form-control" th:field="*{ingredients[__${stat.index}__].unitOfMeasure.id}">
+                                                    <option th:each="item : ${uomList}"  th:value="${item.id}" th:text="${item.description}"></option>
+                                                </select>
+                                                <input type="hidden" th:field="*{ingredients[__${stat.index}__].recipe.id}" th:value="${recipe.id}" />
                                             </li>
                                         </ul>
                                     </div>
