--- a/src/main/resources/templates/recipe/ingredient/form.html
+++ b/src/main/resources/templates/recipe/ingredient/form.html
@@ -13,7 +13,7 @@
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row justify-content-center">
         <div class="col-md-6 col-md-offset-3">
-            <form  th:object="${ingredient}" th:action="@{'/recipe/' + ${ingredient.getRecipeId()} + '/ingredient'} " method="post">
+            <form  th:object="${ingredient}" th:action="@{'/recipe/' + '/ingredient' + + ${ingredient.getRecipeId()}} " method="post">
                 <input type="hidden" th:field="*{id}"/>
                 <div class="card border border-primary">
                     <div class="panel panel-primary">
