--- a/src/main/resources/templates/recipe/ingredient/index.html
+++ b/src/main/resources/templates/recipe/ingredient/index.html
@@ -24,6 +24,7 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Description</th>
+                                    <th>Unit Of Measure</th>
                                     <th>Actions</th>
                                 </tr>
                                 </thead>
@@ -31,6 +32,7 @@
                                 <tr th:each="ingredient:${recipe.ingredients}">
                                     <td th:text="${ingredient.id}"></td>
                                     <td th:text="${ingredient.getAmount()}"></td>
+                                    <td th:text="${ingredient.unitOfMeasure.description}"></td>
                                     <td>
                                         <div>
                                             <a th:href="@{'/recipe/ingredient/view/'+ ${ingredient.id}}" th:text="View">View</a>
