--- a/src/main/resources/templates/recipe/create.html
+++ b/src/main/resources/templates/recipe/create.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Recipes</title>
 
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
     <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/js/bootstrap.min.js}"></script>
@@ -13,7 +14,7 @@
 <body>
 <form action="#" class="form-control form-control-sm" th:action="'new/add'" th:object="${job}"
       method="post">
-    <!-- Custom Form Start -->
+    <!-- Unused, I use form for both creating and updating -->
     <div class="row">
         <div class="col-sm-6">
             <div class="card">
