--- a/src/main/resources/templates/recipe/view.html
+++ b/src/main/resources/templates/recipe/view.html
@@ -34,6 +34,11 @@
                                 <div class="col-md-3">
                                     <p th:text="${recipe.getPrepTime()} +' Min'">30 min</p>
                                 </div>
+
+                                <div class="col-md-3">
+                                    <img  th:src="@{'/recipe/recipeimage/'+ ${recipe.id}}" width="200" height="200" />
+                                </div>
+
                                 <div class="col-md-3">
                                     <h5>Difficulty:</h5>
                                 </div>
