--- a/src/main/resources/templates/recipe/form.html
+++ b/src/main/resources/templates/recipe/form.html
@@ -23,9 +23,14 @@
                             <div class="card-body">
 
                                 <div class="row">
-                                    <div class="col-md-3 form-group">
+                                    <div class="col-md-12 form-group" th:class="${#fields.hasErrors('description')} ? 'col-md-12 form-group text-danger' : 'col-md-12 form-group'">
                                         <label>Recipe Description:</label>
-                                        <input type="text" class="form-control" th:field="*{description}"/>
+                                        <input type="text" class="form-control" th:field="*{description}" th:errorclass="is-invalid" />
+                                        <span class="help-block" th:if="${#fields.hasErrors('description')}">
+                                            <ul>
+                                                <li th:each="err : ${#fields.errors('description')}" th:text="${#strings.capitalize(err)}" style="color: blue;"></li>
+                                            </ul>
+                                        </span>
                                     </div>
                                     <div class="card-body" style="margin-right:15px">
                                         <input name="imageFile" type="file"  accept="image/*" class="form-control-file">
