--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/somestuff.css}"/>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
-    <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
 </head>
 <body>
-
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -25,13 +26,14 @@
                     </div>
                     <div class="card-body">
                         <div class="table-responsive" th:if="${!#lists.isEmpty(recipes)}">
-                            <table class="table table-hover">
+                            <table id="recipeTable" class="table table-hover">
                                 <thead class="flex-column-reverse">
                                 <tr>
                                     <th>ID</th>
                                     <th>Description</th>
                                     <th>View</th>
                                     <th>Update</th>
+                                    <th>Delete</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -53,3 +55,14 @@
     </div>
 </body>
 </html>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+   $.noConflict();
+   jQuery(document).ready(function($) {
+      $('#recipeTable').DataTable({
+         "lengthMenu": [1, 5, 10, 20],
+         "pageLength": 10 // Set for onstart
+      });
+   });
+    /*]]>*/
+</script>
