--- a/src/main/resources/templates/recipe/form.html
+++ b/src/main/resources/templates/recipe/form.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Recipes</title>
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/form.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/css/bootstrap.min.css}">
-    <script src="/webjars/jquery/3.6.3/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous" th:href="@{/webjars/bootstrap/5.2.3/dist/js/bootstrap.min.js}"></script>
 
 
@@ -18,7 +18,7 @@
                     <div class="card-group">
                         <div class="card border-primary" >
                             <div class="card-header">
-                                <h1 class="card-title">Edit Recipe Information</h1>
+                                <h1 class="card-title" th:text="${mode == 'create' ? 'Create' : 'Update'} + ' Recipe Information'"></h1>
                             </div>
                             <div class="card-body">
 
@@ -33,27 +33,8 @@
                                         </span>
                                     </div>
                                     <div class="card-body" style="margin-right:15px">
-                                        <input name="imageFile" type="file"  accept="image/*" class="form-control-file">
-                                        <img  th:src="@{'/recipe/recipeimage/'+ (${recipe.id} ?:'null')}" width="200" height="200" />
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-3 form-group">
-                                        <label>Categories:</label>
-                                    </div>
-                                    <div class="col-md-9 form-group">
-                                        <div class="radio">
-                                            <label>
-                                                <input type="checkbox" value=""/>
-                                                Cat 1
-                                            </label>
-                                        </div>
-                                        <div class="radio" th:remove="all">
-                                            <label>
-                                                <input type="checkbox" value=""/>
-                                                Cat 2
-                                            </label>
-                                        </div>
+                                        <input id="imageInput" name="imageFile" type="file"  accept="image/*" class="form-control-file"  onchange="previewImage()">
+                                        <img id="imagePreview" th:src="@{'/recipe/recipeimage/'+${recipe.id}}" width="200" height="200" />
                                     </div>
                                 </div>
                                 <div class="row">
@@ -111,7 +92,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Buraya kadar olan kısımda sorun var -->
                     <div class="card-group" style="margin-top: 10px">
                         <div class="card border-primary">
                             <div class="card-heading">
@@ -199,6 +179,7 @@ function addIngredient() {
 
 
   var uomSelect = document.createElement("select");
+  uomSelect.classList.add("form-control");
   uomSelect.name = "newIngredientUOM";
 
   // Get the UOMList from modal
@@ -213,16 +194,11 @@ function addIngredient() {
   uomSelect.appendChild(option);
   }
 
-
-
   // Create a new list item to contain the ingredient inputs
   var listItem = document.createElement("li");
   listItem.appendChild(amountInput);
-  listItem.appendChild(document.createTextNode(" - "));
-  listItem.appendChild(uomSelect);
-  listItem.appendChild(document.createTextNode(" - "));
   listItem.appendChild(descriptionInput);
-
+  listItem.appendChild(uomSelect);
   // Append the new list item to the ingredient list
   var ingredientList = document.getElementById("ingredientList");
   ingredientList.appendChild(listItem);
@@ -267,6 +243,19 @@ function submitForm() {
   // Submit the form
   form.submit();
 }
+
+function previewImage() {
+        var input = document.getElementById('imageInput');
+        var preview = document.getElementById('imagePreview');
+
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                preview.src = e.target.result;
+            };
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
 
 /*]]>*/
 </script>
