Added footer and Header, Fixed some stuff. Added an empty file to gitignore to see how it works. I may later try to update the file and see if it gets updated in the github repository. Added ReadME.md

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
 </head>
 <body>
+<div th:insert="~{fragments/header.html::header}"></div>
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row justify-content-center">
             <div class="col-md-6">
