--- a/src/main/resources/templates/recipe/ingredient/index.html
+++ b/src/main/resources/templates/recipe/ingredient/index.html
@@ -10,14 +10,15 @@
 
 </head>
 <body>
+
     <div class="container-fluid" style="margin-top: 20px">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card border border-primary">
-                    <div class="card-header bg-primary text-light">
+                    <div class="card-header bg-primary text-light" style="display: flex; justify-content: space-between; align-items: center;">
                         <h3 class="card-title">Ingredients!</h3>
-                        <div style="margin-left: auto;">
-                            <a class="hyperbutton" th:href="@{'/recipe/ingredient/create/'+${recipe.id}}">Create Recipe</a>
+                        <div>
+                            <a class="hyperbutton" th:href="@{'/recipe/ingredient/create/'+${recipe.id}}">Create Ingredient</a>
                         </div>
                     </div>
                     <div class="card-body">
