--- a/src/main/resources/static/css/form.css
+++ b/src/main/resources/static/css/form.css
@@ -1,3 +1,17 @@
 li {
     margin-bottom: 5px; /* Adjust the value based on your desired gap */
 }
+
+.btn-add {
+    background-color: #28a745; /* Green background color */
+    color: #fff; /* White text color */
+    padding: 5px 10px; /* Adjust padding for button size */
+    margin-top: 10px; /* Margin from the top */
+    border: none; /* Remove border */
+    cursor: pointer; /* Add pointer cursor on hover */
+    transition: background-color 0.3s ease; /* Smooth color transition on hover */
+}
+
+.btn-add:hover {
+    background-color: #218838; /* Darker green on hover */
+}
