--- a/src/main/resources/templates/exceptions/400error.html
+++ b/src/main/resources/templates/exceptions/400error.html
@@ -13,7 +13,7 @@
 <body>
 <div class="d-flex align-items-center justify-content-center vh-100">
     <div class="text-center">
-        <h1 class="display-1 fw-bold" th:text="${response}"></h1>
+        <h1 class="display-1 fw-bold" th:text="${message}"></h1>
         <p class="fs-3"> <span class="text-danger" th:text="${'Oopps! ' + exception.getClass() }"></span> </p>
         <p class="lead" th:text="${exception.getMessage()}" ></p>
         <p th:text="${exception.getCause()}">
